--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the PVIFA<br> 
+    What is the PVIFA calculator?<br>
+    The PVIFA calculator is a tool that helps you make better investment decisions.<br>
+    How to calculate PVIFA?<br>
+    To calculate PVIFA you should use the following formula:<br>
+    PVIFA = (1 - (1 + interest rate per period)^-number of periods) / interest rate per period<br>
+    Why use PVIFA calculator?<br>
+    The PVIFA calculator is used in order to make better investment decisions.<br>
+
+</p>
   <script src="app.js"></script>
 </body>
 </html>
